fixing layout problems

--- a/style.css
+++ b/style.css
@@ -676,33 +676,46 @@ ul {
     vertical-align: bottom;
     margin-top: 30px;
     margin-bottom: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
     gap: 142px;
     padding: 142px;
-    width: 1100px;
+    width: 70%;
     height: 2694px;
+    position: relative;
+    left: 30px;
   }
 
   .card {
-    width: 1156px;
+    width: 100%;
     height: 496px;
     display: flex;
     flex-direction: row;
     border-radius: 24px;
     gap: 50px;
     position: relative;
+    margin: 60px 40px 16px 40px;
+  }
+
+  .photo{
+    width: 45%;
+    border-radius: 8px;
+    margin-right: 3px;
+
   }
 
   .work-img {
-    width: 544px;
+    width: 100%;
     height: 448px;
-    border-radius: 8px;
+    
   }
 
   .left-block {
     position: absolute;
-    right: 190px;
+    right: 13%;
     top: 30px;
     gap: 8px;
+    margin-left: 3px;
   }
 
   .work-img1 {
@@ -716,7 +729,7 @@ ul {
 
   .left-block1 {
     position: absolute;
-    left: 50px;
+    left: 30px;
     top: 30px;
   }
 
@@ -746,9 +759,9 @@ ul {
 
   .skill {
     position: absolute;
-    width: 600px;
+    width: 30%;
     right: 90px;
-    left: 600px;
+    left: 800px;
     top: 4180px;
   }
 
@@ -775,7 +788,7 @@ ul {
 
   .top {
     position: absolute;
-    left: 150px;
+    left: 250px;
     top: 4270px;
     width: 500px;
   }
